Changelog for DimensionDoor (v2.1.1-SNAPSHOT)

2012-08-07 03:01:22 +0100    localisation fixes (James Richardson)
2012-08-07 02:55:01 +0100    remember to call super loadConfiguration (James Richardson)
2012-08-07 02:52:29 +0100    register world root permission (James Richardson)
2012-08-07 02:49:12 +0100    remove unused imports (James Richardson)
2012-08-07 02:48:42 +0100    only set gamemode when teleporting between worlds (James Richardson)
2012-08-07 02:47:34 +0100    support large biomes (James Richardson)
2012-08-07 02:46:59 +0100    converted to new bukkit utils (James Richardson)
2012-08-02 14:47:56 +0100    fix ClassCastException (James Richardson)
2012-08-02 10:21:40 +0100    switch to using parent pom (James Richardson)
2012-08-02 10:20:16 +0100    fix attempting to save the world before we add it (James Richardson)
2012-08-01 07:39:58 +0100    helps to remember to get the message (James Richardson)
2012-08-01 07:38:46 +0100    send message to players when a teleport is cancelled (James Richardson)
2012-08-01 07:33:18 +0100    enable spawn command (James Richardson)
2012-08-01 01:41:05 +0100    implement metrics (James Richardson)
2012-08-01 01:38:36 +0100    implement same world spawning - exception for the end (James Richardson)
2012-08-01 01:13:40 +0100    implement creative inventory clearing (James Richardson)
2012-08-01 01:00:36 +0100    clean up (James Richardson)
2012-08-01 00:56:26 +0100    enable using modify command from console (James Richardson)
2012-08-01 00:55:40 +0100    all commands updated (James Richardson)
2012-08-01 00:16:07 +0100    finished info command (James Richardson)
2012-07-31 23:42:48 +0100    implemented info command (James Richardson)
2012-07-31 23:25:58 +0100    added ClearCommand (James Richardson)
2012-07-31 23:20:51 +0100    remove old classes ready for refactoring (James Richardson)
2012-07-31 23:10:29 +0100    fix ListCommand (James Richardson)