@@ -4,8 +4,8 @@ dimensiondoor.must-specify-a-world-name: &REDYou must specify a world name!
 
 # Creation commands
 ## Create command
-world.permission-name: access
-world.permission-description: Allow access to {0}
+world.permission-description: Allow access to {0}.
+world.wildcard-permission-name: access
 world.wildcard-permission-description: Allow access to all worlds.
 world.not-allowed-to-enter-world: &REDYou are not allowed to enter that world.
 worldmanager.configured-worlds: Configured worlds: {0} out of {1}.
